--- a/cmd/i18n/app.zh.json
+++ b/cmd/i18n/app.zh.json
@@ -1,27 +1,27 @@
 [
     {
         "id": "ブレ生成対象モデル(Pmx)",
-        "translation": "模糊生成目标模型(Pmx)"
+        "translation": "模糊生成目标模型 (Pmx)"
     },
     {
         "id": "ブレ生成対象モデルPmxファイルを選択してください",
-        "translation": "请选择模糊生成目标模型Pmx文件"
+        "translation": "请选择模糊生成目标模型的Pmx文件"
     },
     {
         "id": "ブレ生成対象モデルの使い方",
-        "translation": "模糊生成目标模型的使用方法:\n・可以设置要添加模糊设置的Pmx模型\n・可以选择模型名称字段中的字符串"
+        "translation": "- 可以设置希望添加模糊设置的Pmx模型\n- 可以选择模型名称栏中的字符串"
     },
     {
         "id": "確認用モーション(Vmd/Vpd)",
-        "translation": "确认用运动文件 (Vmd/Vpd)"
+        "translation": "验证用动作 (Vmd/Vpd)"
     },
     {
         "id": "確認用モーション(Vmd/Vpd)ファイルを選択してください",
-        "translation": "请选择确认用运动文件 (Vmd/Vpd)"
+        "translation": "请选择验证用动作 (Vmd/Vpd) 文件"
     },
     {
         "id": "確認用モーションの使い方",
-        "translation": "确认用运动文件的使用方法:\n・可以任意设置运动Vmd或Vpd\n・可以选择运动中模型名称字段中的字符串"
+        "translation": "- 可以设置任何动作Vmd或Vpd\n- 可以选择动作内的模型名称栏中的字符串"
     },
     {
         "id": "出力モデル(Pmx)",
@@ -29,15 +29,19 @@
     },
     {
         "id": "出力モデル(Pmx)ファイルパスを指定してください",
-        "translation": "请指定输出模型 (Pmx) 文件路径"
+        "translation": "请指定输出模型 (Pmx) 的文件路径"
     },
     {
         "id": "出力モデルの使い方",
-        "translation": "输出模型的使用方法:\n・可以设置包含模糊设置的模型的输出文件路径\n・默认会自动设置输出路径，但也可以更改为任意路径"
+        "translation": "- 可以设置包含模糊设置的模型的输出文件路径。\n- 输出目标自动设置，但可以更改为任意路径"
     },
     {
         "id": "次へ進む",
-        "translation": "继续下一步"
+        "translation": "下一步"
+    },
+    {
+        "id": "クリア",
+        "translation": "清除输入"
     },
     {
         "id": "保存",
@@ -53,59 +57,59 @@
     },
     {
         "id": "Step1Label",
-        "translation": "步骤 1:\n・请指定要添加模糊设置的Pmx模型\n・运动设置是可选的\n・确认模型显示后，点击底部的“继续下一步”按钮"
+        "translation": "- 请选择希望添加模糊设置的Pmx模型\n- 动作设置是可选的\n- 确认模型显示后，点击底部的“下一步”按钮"
     },
     {
         "id": "Step1成功",
-        "translation": "模糊设置目标模型已成功加载。\n前往步骤2标签"
+        "translation": "目标模型的模糊设置成功加载。\n前往Step.2选项卡"
     },
     {
         "id": "Step1失敗",
-        "translation": "模糊设置目标模型加载失败。\n请检查是否指定了正确的文件路径"
+        "translation": "未能加载目标模型的模糊设置。\n请检查是否指定了正确的文件路径"
     },
     {
         "id": "Step2Label",
-        "translation": "步骤 2:\n・确保只选择了要添加模糊设置的材质\n・对于日本刀，只选择与刀刃相关的材质"
+        "translation": "- 确保仅选择希望应用模糊设置的材质\n- 对于日本刀，仅选择与刀身相关的材质"
     },
     {
         "id": "Step2成功",
-        "translation": "模糊设置目标材质已成功设置。\n前往步骤3标签"
+        "translation": "成功设置了目标材质的模糊设置。\n前往Step.3选项卡"
     },
     {
         "id": "Step2失敗",
-        "translation": "没有选择模糊设置目标材质。\n请选择一个或多个要添加模糊设置的材质"
+        "translation": "未选择任何目标材质的模糊设置。\n请选择希望添加模糊设置的一个或多个材质"
     },
     {
         "id": "Step3Label",
-        "translation": "步骤 3:\n・选择要添加模糊设置的材质的峰部分的起始顶点\n・对于日本刀，这里是棱区\n・如果同一位置有重叠的顶点，则用逗号分隔显示\n・如果错误选择了顶点，再次选择以取消选择"
+        "translation": "- 选择希望应用模糊设置的材质，从开始点选择一个峰的顶点。\n- 对于日本刀，这是峰区。\n- 如果有重叠的顶点，将以逗号分隔显示\n- 如果错误选择了顶点，可以按住Ctrl键并再次选择该顶点以取消选择。"
     },
     {
         "id": "Step3成功",
-        "translation": "模糊设置目标峰起始顶点已成功设置。\n前往步骤4标签"
+        "translation": "成功设置了峰的起点顶点的模糊设置。\n前往Step.4选项卡"
     },
     {
         "id": "Step3失敗",
-        "translation": "没有选择模糊设置目标峰起始顶点。\n请选择要添加模糊设置的材质的峰部分的一个起始顶点"
+        "translation": "未选择峰的起点顶点的模糊设置。\n请选择希望应用模糊设置的材质的峰的起点顶点。"
     },
     {
         "id": "Step4Label",
-        "translation": "步骤 4:\n・选择要添加模糊设置的材质的刀尖部分的一个顶点\n・如果同一位置有重叠的顶点，则用逗号分隔显示\n・如果错误选择了顶点，再次选择以取消选择"
+        "translation": "- 选择希望应用模糊设置的材质的一个顶点。\n- 如果有重叠的顶点，将以逗号分隔显示\n- 如果错误选择了顶点，可以按住Ctrl键并再次选择该顶点以取消选择。"
     },
     {
         "id": "Step4成功",
-        "translation": "模糊设置目标刀尖顶点已成功设置。\n前往步骤5标签"
+        "translation": "成功设置了模糊设置的顶点。\n前往Step.5选项卡"
     },
     {
         "id": "Step4失敗",
-        "translation": "没有选择模糊设置目标刀尖顶点。\n请选择要添加模糊设置的材质的刀尖部分的一个顶点"
+        "translation": "未选择模糊设置的顶点。\n请选择希望应用模糊设置的材质的一个顶点。"
     },
     {
         "id": "Step5Label",
-        "translation": "步骤 5:\n・选择要显示为模糊的材质的刃部分的顶点\n・选择顺序不受限制\n・如果同一位置有重叠的顶点，则用逗号分隔显示\n・如果错误选择了顶点，再次选择以取消选择"
+        "translation": "- 从希望应用模糊设置的材质中，选择要显示模糊的刀刃部分的顶点。\n- 选择顺序是任意的。\n- 如果有重叠的顶点，将以逗号分隔显示\n- 如果错误选择了顶点，可以按住Ctrl键并再次选择该顶点以取消选择。"
     },
     {
         "id": "Step5失敗",
-        "translation": "未选择要设置刀片的目标顶点。\n请选择要显示为刀片的部分的顶点。"
+        "translation": "未选择刀刃部分的模糊设置顶点。\n请选择希望显示模糊的刀刃部分的顶点。"
     },
     {
         "id": "生成失敗",
@@ -117,11 +121,11 @@
     },
     {
         "id": "生成失敗メッセージ",
-        "translation": "生成包含模糊设置的模型失败\n错误信息: {{.Error}}"
+        "translation": "未能生成包含模糊设置的模型\n错误消息: {{.Error}}"
     },
     {
         "id": "生成成功メッセージ",
-        "translation": "生成包含模糊设置的模型成功\n预览模型正在原始模型上旋转\n【检查事项】\n・确保模糊仅向峰侧延伸 …\n　为了表示势头，模糊材质设置为仅向峰侧延伸\n　（模糊材质向挥下方向的反方向延伸）\n　请检查模糊是否没有向奇怪的方向延伸\n　（为了使模糊部分更明显，添加了红色变形）\n・确保模糊材质中没有缺失的顶点 …\n　只有峰侧的顶点设置为延伸为模糊，刃侧的顶点跟随主体。\n　如果模糊材质中有孔洞，则表示在步骤5中刃顶点选择中遗漏了一些必要的顶点。\n　在这种情况下，请从“重试”按钮重新开始"
+        "translation": "成功生成了包含模糊设置的模型\n预览模型在原始模型上旋转\n\n【检查事项】\n- 模糊是否仅延伸到峰侧？\n   模糊材质仅延伸到峰侧以表示动量\n   （模糊材质延伸到下摆动作的相反方向）\n   请确认模糊没有延伸到奇怪的方向\n   （为了便于理解模糊部分，添加了红色变形）\n- 模糊材质中是否有漏掉的顶点？\n   峰侧的顶点被设置为延伸为模糊，刀刃侧的顶点被设定为跟随主体。\n   如果模糊材质中有孔，说明Step.5中的刀刃顶点选择不足。\n\n如果想要更改设置，请点击Step.5中的第二个“取消预览并重新调整”按钮。\n如果没有问题，请点击“保存”按钮。"
     },
     {
         "id": "出力失敗",
@@ -133,11 +137,11 @@
     },
     {
         "id": "出力失敗メッセージ",
-        "translation": "输出包含模糊设置的模型失败\n错误信息: {{.Error}}"
+        "translation": "未能输出包含模糊设置的模型\n错误消息: {{.Error}}"
     },
     {
         "id": "出力成功メッセージ",
-        "translation": "成功输出包含模糊设置的模型\n默认情况下，模糊材质{{.Path}}"
+        "translation": "成功输出了包含模糊设置的模型\n默认情况下，模糊材质是隐藏的，请添加显示变形\n预览中使用的动作也作为参考输出\n\n{{.Path}}"
     },
     {
         "id": "出力モデルなし",
@@ -145,10 +149,66 @@
     },
     {
         "id": "出力モデルなしメッセージ",
-        "translation": "未找到可输出的包含模糊设置的模型。\n请重新进行预览"
+        "translation": "找不到可输出的带有模糊设置的模型。\n请重新进行预览"
     },
     {
         "id": "設定失敗",
         "translation": "设置失败"
+    },
+    {
+        "id": "概要",
+        "translation": "工具概述"
+    },
+    {
+        "id": "概要メッセージ",
+        "translation": "这是一个用于为武器（主要是刀）添加模糊设置的工具。\n当刀被挥下时，模糊出现在峰侧。\n默认情况下，它是隐藏的，并通过变形调整透明度显示。\n另外，还会创建颜色变形和AL变形。"
+    },
+    {
+        "id": "Step1概要",
+        "translation": "Step.1 概述"
+    },
+    {
+        "id": "Step1メッセージ",
+        "translation": "请在“模糊生成目标模型”栏中设置希望添加模糊设置的PMX模型。\n验证动作的设置是可选的。\n模型正确显示后，请点击屏幕底部的“下一步”按钮。"
+    },
+    {
+        "id": "Step2概要",
+        "translation": "Step.2 概述"
+    },
+    {
+        "id": "Step2メッセージ",
+        "translation": "确保仅选择“模糊生成目标模型”中设置的模型的所有材质中希望添加模糊设置的材质。\n初始时会选择所有材质，取消选择的材质会被隐藏。\n当只显示希望添加模糊设置的材质时，请点击屏幕底部的“下一步”按钮。"
+    },
+    {
+        "id": "Step3概要",
+        "translation": "Step.3 概述"
+    },
+    {
+        "id": "Step3メッセージ",
+        "translation": "从希望添加模糊设置的材质中选择在峰侧（希望延伸模糊的方向的峰侧）手元的顶点。\n将从选择的根元顶点生成到切先的顶点模糊。\nStep.3显示时，线框和顶点选择功能已打开。\n重叠的顶点（位于相同位置的顶点）将以逗号分隔显示。\n选择完根元顶点后，请点击屏幕底部的“下一步”按钮。"
+    },
+    {
+        "id": "Step4概要",
+        "translation": "Step.4 概述"
+    },
+    {
+        "id": "Step4メッセージ",
+        "translation": "从希望添加模糊设置的材质中选择切先（模糊的终点）顶点。\nStep.4显示时，线框和顶点选择功能已打开。\n重叠的顶点（位于相同位置的顶点）将以逗号分隔显示。\n选择完切先顶点后，请点击屏幕底部的“下一步”按钮。"
+    },
+    {
+        "id": "Step5概要",
+        "translation": "Step.5 概述"
+    },
+    {
+        "id": "Step5メッセージ",
+        "translation": "从希望添加模糊设置的材质中选择希望显示模糊的刀刃侧的顶点。\n将针对在Step.3中选择的峰顶点、Step.4中选择的切先顶点和这里选择的刀刃顶点之间的顶点生成模糊材质。\n选择顺序是任意的。\n选择完刀刃顶点后，请点击屏幕底部的“预览”按钮。"
+    },
+    {
+        "id": "Step5プレビュー概要",
+        "translation": "Step.5 预览概述"
+    },
+    {
+        "id": "Step5プレビューメッセージ",
+        "translation": "点击“预览”按钮，将在原始模型上显示添加了模糊的模型。\n（有关相机操作，请参阅菜单>查看器>使用方法）\n\n【检查事项】\n- 模糊是否仅延伸到峰侧？\n   模糊材质仅延伸到峰侧以表示动量\n   （模糊材质延伸到下摆动作的相反方向）\n   请确认模糊没有延伸到奇怪的方向\n   （为了便于理解模糊部分，添加了红色变形）\n- 模糊材质中是否有漏掉的顶点？\n   峰侧的顶点被设置为延伸为模糊，刀刃侧的顶点被设定为跟随主体。\n   如果模糊材质中有孔，说明Step.5中的刀刃顶点选择不足。\n\n如果想要更改设置，请点击Step.5中的第二个“取消预览并重新调整”按钮。\n（虽然您可以在预览期间进行编辑，但如果不点击“预览”按钮，则不会反映新的设置）\n如果没有问题，请点击“保存”按钮。"
     }
 ]
