--- a/cmd/i18n/app.en.json
+++ b/cmd/i18n/app.en.json
@@ -1,27 +1,27 @@
 [
     {
         "id": "ブレ生成対象モデル(Pmx)",
-        "translation": "Target Model for Blur Generation (Pmx)"
+        "translation": "Model for Blur Generation (Pmx)"
     },
     {
         "id": "ブレ生成対象モデルPmxファイルを選択してください",
-        "translation": "Please select the target model Pmx file for blur generation"
+        "translation": "Please select the Pmx file for the Blur Generation Model"
     },
     {
         "id": "ブレ生成対象モデルの使い方",
-        "translation": "How to use the target model for blur generation:\n・You can set the Pmx model to which you want to add blur settings\n・You can select the string in the model name field"
+        "translation": "- You can set the Pmx model where you want to apply the blur setting\n- The string in the model name field can be selected"
     },
     {
         "id": "確認用モーション(Vmd/Vpd)",
-        "translation": "Motion for Confirmation (Vmd/Vpd)"
+        "translation": "Verification Motion (Vmd/Vpd)"
     },
     {
         "id": "確認用モーション(Vmd/Vpd)ファイルを選択してください",
-        "translation": "Please select the motion file for confirmation (Vmd/Vpd)"
+        "translation": "Please select the Verification Motion (Vmd/Vpd) file"
     },
     {
         "id": "確認用モーションの使い方",
-        "translation": "How to use the motion for confirmation:\n・You can set the motion Vmd or Vpd optionally\n・You can select the string in the model name field in the motion"
+        "translation": "- You can set any motion Vmd or Vpd\n- The string in the model name field in the motion can be selected"
     },
     {
         "id": "出力モデル(Pmx)",
@@ -29,15 +29,19 @@
     },
     {
         "id": "出力モデル(Pmx)ファイルパスを指定してください",
-        "translation": "Please specify the file path for the output model (Pmx)"
+        "translation": "Please specify the file path for the Output Model (Pmx)"
     },
     {
         "id": "出力モデルの使い方",
-        "translation": "How to use the output model:\n・You can set the file path for the output model with blur settings\n・The output path is automatically set, but you can change it to any path"
+        "translation": "- You can set the output file path for the model with the blur setting.\n- The output destination is set automatically, but it can be changed to any path"
     },
     {
         "id": "次へ進む",
-        "translation": "Proceed to the next step"
+        "translation": "Proceed to Next"
+    },
+    {
+        "id": "クリア",
+        "translation": "Clear Input"
     },
     {
         "id": "保存",
@@ -49,63 +53,63 @@
     },
     {
         "id": "リトライ",
-        "translation": "Cancel the preview and readjust"
+        "translation": "Cancel Preview and Readjust"
     },
     {
         "id": "Step1Label",
-        "translation": "Step 1:\n・Please specify the Pmx model to which you want to add blur settings\n・Motion settings are optional\n・Click the 'Proceed to the next step' button at the bottom once you have confirmed the model display"
+        "translation": "- Please specify the Pmx model you want to apply the blur setting\n- Setting motion is optional\n- Once the model display is confirmed, click the 'Proceed to Next' button at the bottom"
     },
     {
         "id": "Step1成功",
-        "translation": "The target model for blur settings has been successfully loaded.\nProceed to Step 2 tab"
+        "translation": "The target model for blur setting was successfully loaded.\nProceed to the Step.2 tab"
     },
     {
         "id": "Step1失敗",
-        "translation": "Failed to load the target model for blur settings.\nPlease check if the correct file path is specified"
+        "translation": "Failed to load the target model for blur setting.\nPlease check if the correct file path is specified"
     },
     {
         "id": "Step2Label",
-        "translation": "Step 2:\n・Ensure that only the material for which you want to add blur settings is selected\n・In the case of a Japanese sword, select only the material related to the blade"
+        "translation": "- Make sure that only the materials you want to apply the blur setting to are selected\n- For Japanese swords, select only the materials related to the blade"
     },
     {
         "id": "Step2成功",
-        "translation": "The target material for blur settings has been successfully set.\nProceed to Step 3 tab"
+        "translation": "The target materials for blur setting have been successfully set.\nProceed to the Step.3 tab"
     },
     {
         "id": "Step2失敗",
-        "translation": "No target material for blur settings has been selected.\nPlease select at least one material for which you want to add blur settings"
+        "translation": "No target materials for blur setting are selected.\nPlease select one or more materials you want to apply the blur setting to"
     },
     {
         "id": "Step3Label",
-        "translation": "Step 3:\n・Select one vertex at the starting point of the ridge (mine) part of the material for which you want to add blur settings\n・In the case of a Japanese sword, this is the mune-machi\n・If there are overlapping vertices at the same location, they are displayed separated by commas\n・If you mistakenly select a vertex, select it again to deselect it"
+        "translation": "- For the material you want to apply the blur setting to, select a single vertex at the starting point of the ridge.\n- For Japanese swords, this is the ridge area.\n- If there are overlapping vertices, they will be displayed separated by commas\n- If you mistakenly select a vertex, you can deselect it by pressing the Ctrl key and clicking the vertex again."
     },
     {
         "id": "Step3成功",
-        "translation": "The starting vertex of the ridge for blur settings has been successfully set.\nProceed to Step 4 tab"
+        "translation": "The starting vertex of the ridge for blur setting has been successfully set.\nProceed to the Step.4 tab"
     },
     {
         "id": "Step3失敗",
-        "translation": "No starting vertex of the ridge for blur settings has been selected.\nPlease select one vertex at the starting point of the ridge part of the material for which you want to add blur settings"
+        "translation": "No starting vertex of the ridge for blur setting is selected.\nPlease select a single vertex at the starting point of the ridge for the material you want to apply the blur setting to."
     },
     {
         "id": "Step4Label",
-        "translation": "Step 4:\n・Select one vertex at the tip of the material for which you want to add blur settings\n・If there are overlapping vertices at the same location, they are displayed separated by commas\n・If you mistakenly select a vertex, select it again to deselect it"
+        "translation": "- For the material you want to apply the blur setting to, select a single vertex at the tip.\n- If there are overlapping vertices, they will be displayed separated by commas\n- If you mistakenly select a vertex, you can deselect it by pressing the Ctrl key and clicking the vertex again."
     },
     {
         "id": "Step4成功",
-        "translation": "The tip vertex for blur settings has been successfully set.\nProceed to Step 5 tab"
+        "translation": "The vertex at the tip for the blur setting has been successfully set.\nProceed to the Step.5 tab"
     },
     {
         "id": "Step4失敗",
-        "translation": "No tip vertex for blur settings has been selected.\nPlease select one vertex at the tip part of the material for which you want to add blur settings"
+        "translation": "No vertex at the tip for the blur setting is selected.\nPlease select a single vertex at the tip for the material you want to apply the blur setting to."
     },
     {
         "id": "Step5Label",
-        "translation": "Step 5:\n・Select the vertices of the blade part that you want to display as blur in the material for which you want to add blur settings\n・The order of selection does not matter\n・If there are overlapping vertices at the same location, they are displayed separated by commas\n・If you mistakenly select a vertex, select it again to deselect it"
+        "translation": "- For the material you want to apply the blur setting to, select the vertices on the blade side where you want to display the blur.\n- The order of selection is arbitrary.\n- If there are overlapping vertices, they will be displayed separated by commas\n- If you mistakenly select a vertex, you can deselect it by pressing the Ctrl key and clicking the vertex again."
     },
     {
         "id": "Step5失敗",
-        "translation": "Blade setting target vertex is not selected.\nPlease select the vertices of the blade part you want to display as blade."
+        "translation": "No vertices on the blade side for the blur setting are selected.\nPlease select the vertices on the blade side where you want to display the blur."
     },
     {
         "id": "生成失敗",
@@ -117,11 +121,11 @@
     },
     {
         "id": "生成失敗メッセージ",
-        "translation": "Failed to generate the model with blur settings\nError message: {{.Error}}"
+        "translation": "Failed to generate the model with the blur setting\nError Message: {{.Error}}"
     },
     {
         "id": "生成成功メッセージ",
-        "translation": "Successfully generated the model with blur settings\nThe preview model is rotating over the original model\n[Checkpoints]\n・Ensure the blur extends only towards the ridge side …\n　To represent momentum, the blur material is set to extend only towards the ridge side\n　(The blur material extends in the opposite direction of the downward swing)\n　Check that the blur is not extending in an odd direction\n　(Red morph is added to make the blur part more noticeable)\n・Ensure there are no missing vertices in the blur material …\n　Only the vertices on the ridge side are set to extend as blur, and the vertices on the blade side follow the main body.\n　If there are holes in the blur material, it means some necessary vertices were not selected in Step 5 of the blade vertex selection.\n　In that case, please redo from the 'Retry' button"
+        "translation": "Successfully generated the model with the blur setting\nThe preview model is rotating on the original model\n\n[Things to Check]\n- Does the blur extend only on the ridge side? \n   The blur material is set to extend only on the ridge side to represent the momentum\n   (The blur material extends in the opposite direction of the downward motion)\n   Please confirm that the blur does not extend in a strange direction\n   (To make the blur part easier to understand, a red morph has been added)\n- Are there any missing vertices in the blur material? \n   The vertices on the ridge side are set to extend as blur, and the vertices on the blade side are made to follow the main body.\n   If there are holes in the blur material, it means that there are not enough vertices selected in Step.5.\n\nIf you want to change the settings, click the 'Cancel Preview and Readjust' button, the second in Step.5.\nIf there were no issues, click the 'Save' button."
     },
     {
         "id": "出力失敗",
@@ -133,11 +137,11 @@
     },
     {
         "id": "出力失敗メッセージ",
-        "translation": "Failed to output the model with blur settings\nError message: {{.Error}}"
+        "translation": "Failed to output the model with the blur setting\nError Message: {{.Error}}"
     },
     {
         "id": "出力成功メッセージ",
-        "translation": "Successfully output the model with blur settings\nBy default, the blur material {{.Path}}"
+        "translation": "Successfully output the model with the blur setting\nBy default, the blur material is hidden, so please add the display morph\nThe motion used for the preview is also output for reference\n\n{{.Path}}"
     },
     {
         "id": "出力モデルなし",
@@ -145,10 +149,66 @@
     },
     {
         "id": "出力モデルなしメッセージ",
-        "translation": "No model with blur settings available for output.\nPlease redo the preview"
+        "translation": "No model with the blur setting available for output.\nPlease redo the preview"
     },
     {
         "id": "設定失敗",
-        "translation": "Setting failed"
+        "translation": "Setting Failed"
+    },
+    {
+        "id": "概要",
+        "translation": "Tool Overview"
+    },
+    {
+        "id": "概要メッセージ",
+        "translation": "This tool is for adding blur settings to weapons (mainly assumed to be swords).\nThe blur appears on the ridge side when the sword is swung down.\nBy default, it is hidden, and transparency is adjusted and displayed with morphs.\nAdditionally, color morphs and AL morphs are also created."
+    },
+    {
+        "id": "Step1概要",
+        "translation": "Step.1 Overview"
+    },
+    {
+        "id": "Step1メッセージ",
+        "translation": "Set the PMX model you want to add blur settings to in the 'Model for Blur Generation' field.\nSetting the verification motion is optional.\nOnce the model is displayed correctly, click the 'Proceed to Next' button at the bottom of the screen."
+    },
+    {
+        "id": "Step2概要",
+        "translation": "Step.2 Overview"
+    },
+    {
+        "id": "Step2メッセージ",
+        "translation": "Make sure that only the materials for which you want to add blur settings are selected from all materials set in the 'Model for Blur Generation'.\nInitially, all materials are selected, and unselected ones will be hidden.\nOnce only the materials for which you want to add blur settings are displayed, click the 'Proceed to Next' button at the bottom of the screen."
+    },
+    {
+        "id": "Step3概要",
+        "translation": "Step.3 Overview"
+    },
+    {
+        "id": "Step3メッセージ",
+        "translation": "From the material you want to add blur settings to, select the hand vertex on the ridge side (the hand vertex in the direction you want to extend the blur).\nBlur will be generated on the vertices from the selected root vertex towards the tip.\nWhen Step.3 is displayed, wireframe and vertex selection features are turned ON.\nOverlapping vertices (vertices at the same location) will be displayed separated by commas.\nOnce the root vertex is selected, click the 'Proceed to Next' button at the bottom of the screen."
+    },
+    {
+        "id": "Step4概要",
+        "translation": "Step.4 Overview"
+    },
+    {
+        "id": "Step4メッセージ",
+        "translation": "Select the tip (end point of the blur) vertex from the materials you want to add blur settings to.\nWhen Step.4 is displayed, wireframe and vertex selection features are turned ON.\nOverlapping vertices (vertices at the same location) will be displayed separated by commas.\nOnce the tip vertex is selected, click the 'Proceed to Next' button at the bottom of the screen."
+    },
+    {
+        "id": "Step5概要",
+        "translation": "Step.5 Overview"
+    },
+    {
+        "id": "Step5メッセージ",
+        "translation": "From the materials you want to add blur settings to, select the vertices on the blade side where you want to display the blur.\nBlur material will be generated on the vertices between the ridge vertex selected in Step.3, the tip vertex selected in Step.4, and the blade vertices selected here.\nThe order of selection is arbitrary.\nOnce the selection of blade vertices is complete, click the 'Preview' button at the bottom of the screen."
+    },
+    {
+        "id": "Step5プレビュー概要",
+        "translation": "Step.5 Preview Overview"
+    },
+    {
+        "id": "Step5プレビューメッセージ",
+        "translation": "Click the 'Preview' button to display the model with the added blur on top of the original model.\n(For camera operation, refer to Menu > Viewer > Instructions)\n\n[Things to Check]\n- Does the blur extend only on the ridge side? \n   The blur material is set to extend only on the ridge side to represent the momentum\n   (The blur material extends in the opposite direction of the downward motion)\n   Please confirm that the blur does not extend in a strange direction\n   (To make the blur part easier to understand, a red morph has been added)\n- Are there any missing vertices in the blur material? \n   The vertices on the ridge side are set to extend as blur, and the vertices on the blade side are made to follow the main body.\n   If there are holes in the blur material, it means that there are not enough vertices selected in Step.5.\n\nIf you want to change the settings, click the 'Cancel Preview and Readjust' button, the second in Step.5.\n(Although you can edit during the preview, new settings will not be reflected unless you click the 'Preview' button)\nIf there were no issues, click the 'Save' button."
     }
 ]
