--- a/cmd/i18n/app.ja.json
+++ b/cmd/i18n/app.ja.json
@@ -81,7 +81,7 @@
     },
     {
         "id": "Step3Label",
-        "translation": "・ブレ設定を入れたい材質の峰(みね)部分を開始地点の頂点を一点選択してください。\n・日本刀の場合、棟区(むねまち)です。\n・場所が重複する頂点がある場合、カンマ区切りで表示します\n・誤って選択した頂点は、もう一度選択すると選択が解除されます。"
+        "translation": "・ブレ設定を入れたい材質の峰(みね)部分を開始地点の頂点を一点選択してください。\n・日本刀の場合、棟区(むねまち)です。\n・場所が重複する頂点がある場合、カンマ区切りで表示します\n・誤って選択した頂点は、Ctrlキーを押しながらもう一度選択すると選択が解除されます。"
     },
     {
         "id": "Step3成功",
@@ -93,7 +93,7 @@
     },
     {
         "id": "Step4Label",
-        "translation": "・ブレ設定を入れたい材質の切っ先部分の頂点を一点選択してください。\n・場所が重複する頂点がある場合、カンマ区切りで表示します\n・誤って選択した頂点は、もう一度選択すると選択が解除されます。"
+        "translation": "・ブレ設定を入れたい材質の切っ先部分の頂点を一点選択してください。\n・場所が重複する頂点がある場合、カンマ区切りで表示します\n・誤って選択した頂点は、Ctrlキーを押しながらもう一度選択すると選択が解除されます。"
     },
     {
         "id": "Step4成功",
@@ -105,7 +105,7 @@
     },
     {
         "id": "Step5Label",
-        "translation": "・ブレ設定を入れたい材質で、ブレとして表示したい刃部分の頂点を選択してください。\n・選択する順番は任意です。\n・場所が重複する頂点がある場合、カンマ区切りで表示します\n・誤って選択した頂点は、もう一度選択すると選択が解除されます。"
+        "translation": "・ブレ設定を入れたい材質で、ブレとして表示したい刃部分の頂点を選択してください。\n・選択する順番は任意です。\n・場所が重複する頂点がある場合、カンマ区切りで表示します\n・誤って選択した頂点は、Ctrlキーを押しながらもう一度選択すると選択が解除されます。"
     },
     {
         "id": "Step5失敗",
