ボタンステート管理修正

--- a/cmd/i18n/app.ja.json
+++ b/cmd/i18n/app.ja.json
@@ -209,6 +209,6 @@
     },
     {
         "id": "Step5プレビューメッセージ",
-        "translation": "「プレビューで確認する」ボタンをクリックすると、元モデルの上にブレを追加したモデルをプレビュー表示します。\n（カメラの動かし方はメニュー＞ビューワー＞使い方、を参照してください）\n\n【確認していただきたい内容】\n・峰側にだけブレが伸びているか … \n　　勢いを表すため、ブレ材質は峰側にだけ伸びるように設定しています\n　　（振り下ろす方向と逆方向にブレ材質が伸びる）\n　　おかしな方向にブレが伸びていないかを確認してください\n　　（ブレ部分が分かりやすいよう、赤モーフを加えています）\n・ブレ材質に頂点の抜けがないか … \n　　峰側の頂点だけブレとして伸びるように設定し、刃側の頂点は本体に追従させています。\n　　ブレ材質に穴が空いている場合、Step.5 の刃頂点の選択が不足しています。\n\n設定を変更したい場合、Step.5の2番目にある「プレビューを取り消して、再調整する」ボタンをクリックしてください。\n（プレビュー中も編集はできますが、「プレビューで確認する」ボタンをクリックしないと新しい設定は反映されません）\n問題がなかった場合には「保存する」ボタンをクリックしてください。"
+        "translation": "「プレビューで確認する」ボタンをクリックすると、プレビュービューワー側にブレ設定を追加したモデルをプレビュー表示します。\n（カメラの動かし方はメニュー＞ビューワー＞使い方、を参照してください）\n\n【確認していただきたい内容】\n・峰側にだけブレが伸びているか … \n　　勢いを表すため、ブレ材質は峰側にだけ伸びるように設定しています\n　　（振り下ろす方向と逆方向にブレ材質が伸びる）\n　　おかしな方向にブレが伸びていないかを確認してください\n　　（ブレ部分が分かりやすいよう、赤モーフを加えています）\n・ブレ材質に頂点の抜けがないか … \n　　峰側の頂点だけブレとして伸びるように設定し、刃側の頂点は本体に追従させています。\n　　ブレ材質に穴が空いている場合、Step.5 の刃頂点の選択が不足しています。\n\n設定を変更したい場合、Step.5の2番目にある「プレビューを取り消して、再調整する」ボタンをクリックしてください。\n問題がなかった場合には「保存する」ボタンをクリックしてください。"
     }
 ]
