--- a/cmd/i18n/app.ja.json
+++ b/cmd/i18n/app.ja.json
@@ -125,7 +125,7 @@
     },
     {
         "id": "生成成功メッセージ",
-        "translation": "ブレ設定付きモデルの生成に成功しました\n元モデルの上にプレビューモデルが回っています\n\n【確認していただきたい内容】\n・峰側にだけブレが伸びているか … \n　　勢いを表すため、ブレ材質は峰側にだけ伸びるように設定しています\n　　（振り下ろす方向と逆方向にブレ材質が伸びる）\n　　おかしな方向にブレが伸びていないかを確認してください\n　　（ブレ部分が分かりやすいよう、赤モーフを加えています）\n・ブレ材質に頂点の抜けがないか … \n　　峰側の頂点だけブレとして伸びるように設定し、刃側の頂点は本体に追従させています。\n　　ブレ材質に穴が空いている場合、Step.5 の刃頂点の選択が不足しています。\n\n設定を変更したい場合、Step.5の2番目にある「プレビューを取り消して、再調整する」ボタンをクリックしてください。\n問題がなかった場合には「保存する」ボタンをクリックしてください。"
+        "translation": "ブレ設定付きモデルの生成に成功しました\nプレビュービューワーでプレビューモデルが回っています\n\n【確認していただきたい内容】\n・峰側にだけブレが伸びているか … \n　　勢いを表すため、ブレ材質は峰側にだけ伸びるように設定しています\n　　（振り下ろす方向と逆方向にブレ材質が伸びる）\n　　おかしな方向にブレが伸びていないかを確認してください\n　　（ブレ部分が分かりやすいよう、赤モーフを加えています）\n・ブレ材質に頂点の抜けがないか … \n　　峰側の頂点だけブレとして伸びるように設定し、刃側の頂点は本体に追従させています。\n　　ブレ材質に穴が空いている場合、Step.5 の刃頂点の選択が不足しています。\n\n設定を変更したい場合、Step.5の2番目にある「プレビューを取り消して、再調整する」ボタンをクリックしてください。\n問題がなかった場合には「保存する」ボタンをクリックしてください。"
     },
     {
         "id": "出力失敗",
