--- a/cmd/i18n/app.ko.json
+++ b/cmd/i18n/app.ko.json
@@ -57,59 +57,59 @@
     },
     {
         "id": "Step1Label",
-        "translation": "- 블러 설정을 추가하고 싶은 Pmx 모델을 지정하세요\n- 모션 설정은 선택 사항입니다\n- 모델 표시를 확인한 후 하단의 '다음으로 진행' 버튼을 클릭하세요"
+        "translation": "・블러 설정을 하고 싶은 PMX 모델을 지정해 주세요.\n・모션 설정은 선택 사항입니다.\n・모델의 표시를 확인한 후 하단의 '다음으로 진행' 버튼을 클릭하세요."
     },
     {
         "id": "Step1成功",
-        "translation": "블러 설정 대상 모델이 정상적으로 로드되었습니다.\nStep.2 탭으로 이동합니다"
+        "translation": "블러 설정 대상 모델이 정상적으로 로드되었습니다.\nStep.2 탭으로 이동합니다."
     },
     {
         "id": "Step1失敗",
-        "translation": "블러 설정 대상 모델을 로드하지 못했습니다.\n올바른 파일 경로가 지정되었는지 확인하세요"
+        "translation": "블러 설정 대상 모델 로드에 실패했습니다.\n올바른 파일 경로가 지정되어 있는지 확인하세요."
     },
     {
         "id": "Step2Label",
-        "translation": "- 블러 설정을 추가하고 싶은 재질만 선택되어 있는지 확인하세요\n- 일본도의 경우, 칼날과 관련된 재질만 선택하세요"
+        "translation": "・블러 설정을 하고 싶은 재질만 선택된 상태로 해 주세요.\n・일본도의 경우, 칼날에 관한 재질만 선택해 주세요."
     },
     {
         "id": "Step2成功",
-        "translation": "블러 설정 대상 재질이 정상적으로 설정되었습니다.\nStep.3 탭으로 이동합니다"
+        "translation": "블러 설정 대상 재질이 정상적으로 설정되었습니다.\nStep.3 탭으로 이동합니다."
     },
     {
         "id": "Step2失敗",
-        "translation": "블러 설정 대상 재질이 선택되지 않았습니다.\n블러 설정을 추가하고 싶은 재질을 하나 이상 선택하세요"
+        "translation": "블러 설정 대상 재질이 선택되지 않았습니다.\n블러를 설정하고 싶은 재질을 하나 이상 선택하세요."
     },
     {
         "id": "Step3Label",
-        "translation": "- 블러 설정을 추가하고 싶은 재질에서 시작 지점의 마루 부분의 정점을 하나 선택하세요.\n- 일본도의 경우, 마루치(칼등)입니다.\n- 중복된 위치의 정점이 있는 경우, 쉼표로 구분하여 표시합니다\n- 잘못 선택한 정점은 Ctrl 키를 누른 상태에서 다시 선택하면 선택이 취소됩니다."
+        "translation": "・블러 설정을 하고 싶은 재질의 첨부(미네) 부분에서 시작 지점의 하나의 꼭짓점을 선택하세요.\n・일본도의 경우, 무네마치입니다.\n・중복되는 꼭짓점이 있는 경우 쉼표로 구분하여 표시합니다.\n・잘못 선택한 꼭짓점은 Ctrl 키를 누르면서 다시 선택하면 선택이 해제됩니다."
     },
     {
         "id": "Step3成功",
-        "translation": "블러 설정 대상 마루 시작 정점이 정상적으로 설정되었습니다.\nStep.4 탭으로 이동합니다"
+        "translation": "블러 설정 대상 첨부 시작 꼭짓점이 정상적으로 설정되었습니다.\nStep.4 탭으로 이동합니다."
     },
     {
         "id": "Step3失敗",
-        "translation": "블러 설정 대상 마루 시작 정점이 선택되지 않았습니다.\n블러 설정을 추가하고 싶은 재질의 마루 부분에서 시작 지점의 정점을 하나 선택하세요."
+        "translation": "블러 설정 대상 첨부 시작 꼭짓점이 선택되지 않았습니다.\n블러 설정을 하고 싶은 재질의 첨부(미네) 부분에서 시작 지점의 하나의 꼭짓점을 선택하세요."
     },
     {
         "id": "Step4Label",
-        "translation": "- 블러 설정을 추가하고 싶은 재질의 끝부분 정점을 하나 선택하세요.\n- 중복된 위치의 정점이 있는 경우, 쉼표로 구분하여 표시합니다\n- 잘못 선택한 정점은 Ctrl 키를 누른 상태에서 다시 선택하면 선택이 취소됩니다."
+        "translation": "・블러 설정을 하고 싶은 재질의 칼끝 부분에서 하나의 꼭짓점을 선택하세요.\n・중복되는 꼭짓점이 있는 경우 쉼표로 구분하여 표시합니다.\n・잘못 선택한 꼭짓점은 Ctrl 키를 누르면서 다시 선택하면 선택이 해제됩니다."
     },
     {
         "id": "Step4成功",
-        "translation": "블러 설정 대상 끝부분 정점이 정상적으로 설정되었습니다.\nStep.5 탭으로 이동합니다"
+        "translation": "블러 설정 대상 칼끝 꼭짓점이 정상적으로 설정되었습니다.\nStep.5 탭으로 이동합니다."
     },
     {
         "id": "Step4失敗",
-        "translation": "블러 설정 대상 끝부분 정점이 선택되지 않았습니다.\n블러 설정을 추가하고 싶은 재질의 끝부분 정점을 하나 선택하세요."
+        "translation": "블러 설정 대상 칼끝 꼭짓점이 선택되지 않았습니다.\n블러 설정을 하고 싶은 재질의 칼끝 부분에서 하나의 꼭짓점을 선택하세요."
     },
     {
         "id": "Step5Label",
-        "translation": "- 블러 설정을 추가하고 싶은 재질에서 블러로 표시할 칼날 부분의 정점을 선택하세요.\n- 선택 순서는 임의입니다.\n- 중복된 위치의 정점이 있는 경우, 쉼표로 구분하여 표시합니다\n- 잘못 선택한 정점은 Ctrl 키를 누른 상태에서 다시 선택하면 선택이 취소됩니다."
+        "translation": "・블러로 표시하고 싶은 칼날 부분의 꼭짓점을 선택하세요.\n・선택 순서는 자유입니다.\n・중복되는 꼭짓점이 있는 경우 쉼표로 구분하여 표시합니다.\n・잘못 선택한 꼭짓점은 Ctrl 키를 누르면서 다시 선택하면 선택이 해제됩니다."
     },
     {
         "id": "Step5失敗",
-        "translation": "블러 설정 대상 칼날 정점이 선택되지 않았습니다.\n블러로 표시할 칼날 부분의 정점을 선택하세요."
+        "translation": "블러 설정 대상 칼날 꼭짓점이 선택되지 않았습니다.\n블러로 표시하고 싶은 칼날 부분의 꼭짓점을 선택하세요."
     },
     {
         "id": "生成失敗",
@@ -125,7 +125,7 @@
     },
     {
         "id": "生成成功メッセージ",
-        "translation": "블러 설정이 포함된 모델 생성에 성공했습니다\n원본 모델 위에 미리보기 모델이 회전 중입니다\n\n【확인해야 할 사항】\n- 블러가 마루 측에만 확장되었는지 ... \n   블러 재질은 마루 측에만 확장되도록 설정되었습니다\n   (내려치는 방향의 반대 방향으로 블러 재질이 확장됩니다)\n   블러가 이상한 방향으로 확장되지 않았는지 확인하세요\n   (블러 부분이 명확해지도록 빨간 모프를 추가했습니다)\n- 블러 재질에 누락된 정점이 없는지 ... \n   마루 측 정점만 블러로 확장되도록 설정하고, 칼날 측 정점은 본체를 따라가도록 했습니다.\n   블러 재질에 구멍이 있는 경우, Step.5의 칼날 정점 선택이 부족한 것입니다.\n\n설정을 변경하고 싶다면 Step.5의 두 번째 '미리보기를 취소하고 다시 조정' 버튼을 클릭하세요.\n문제가 없으면 '저장' 버튼을 클릭하세요."
+        "translation": "블러 설정이 포함된 모델 생성에 성공했습니다\n프리뷰 뷰어에서 프리뷰 모델이 회전하고 있습니다\n\n【확인해야 할 내용】\n・첨부측에만 블러가 뻗어나가는가?\n　　모멘텀을 나타내기 위해 블러 재질은 첨부측으로만 뻗어나가도록 설정하고 있습니다.\n　　(내리치는 방향의 반대 방향으로 블러 재질이 뻗어나갑니다)\n　　이상한 방향으로 블러가 뻗어나가지 않았는지 확인하세요\n　　(블러 부분을 더 분명하게 하기 위해 빨간 색상을 추가했습니다)\n・블러 재질에 꼭짓점이 빠져있지 않은가?\n　　첨부측 꼭짓점만 블러로 뻗어나가도록 설정하고, 칼날측 꼭짓점은 본체를 따라가도록 설정합니다.\n　　블러 재질에 구멍이 있는 경우, Step.5에서 칼날 꼭짓점 선택이 부족한 것입니다.\n\n설정을 변경하고 싶다면 Step.5의 두 번째에 있는 '프리뷰를 취소하고 다시 조정' 버튼을 클릭하세요.\n문제가 없었다면 '저장' 버튼을 클릭하세요."
     },
     {
         "id": "出力失敗",
@@ -141,7 +141,7 @@
     },
     {
         "id": "出力成功メッセージ",
-        "translation": "블러 설정이 포함된 모델 출력에 성공했습니다\n기본적으로 블러 재질이 숨겨져 있으므로 표시 모프를 추가하세요\n참고로 사용한 모션도 출력됩니다\n\n{{.Path}}"
+        "translation": "블러 설정이 포함된 모델 출력에 성공했습니다\n기본적으로 블러 재질은 비표시 상태이므로, 표시 모프를 적용해 주세요\n참고로 프리뷰에 사용한 모션도 출력하고 있습니다\n\n{{.Path}}"
     },
     {
         "id": "出力モデルなし",
@@ -149,7 +149,7 @@
     },
     {
         "id": "出力モデルなしメッセージ",
-        "translation": "출력 가능한 블러 설정이 포함된 모델을 찾을 수 없습니다.\n미리보기를 다시 시도하세요"
+        "translation": "출력 가능한 블러 설정이 포함된 모델을 찾을 수 없습니다.\n프리뷰를 다시 시도하세요"
     },
     {
         "id": "設定失敗",
@@ -161,7 +161,7 @@
     },
     {
         "id": "概要メッセージ",
-        "translation": "이 도구는 무기(주로 칼)에 블러 설정을 추가하기 위한 도구입니다.\n블러는 칼을 내리칠 때 마루 측에 나타납니다.\n기본적으로 숨겨져 있으며, 모프로 투명도를 조정하여 표시됩니다.\n또한, 색상 모프 및 AL 모프도 생성됩니다."
+        "translation": "무기(주로 검에 대한) 블러 설정을 추가하기 위한 도구입니다.\n블러는 검을 내리칠 때 첨부 측에 표시됩니다.\n기본적으로 비표시 상태이며, 모프를 통해 투명도를 조정합니다.\n추가적으로 색상 모프와 AL 모프도 생성합니다."
     },
     {
         "id": "Step1概要",
@@ -169,7 +169,7 @@
     },
     {
         "id": "Step1メッセージ",
-        "translation": "블러 설정을 추가하고 싶은 PMX 모델을 '블러 생성 대상 모델'란에 설정하세요.\n검증용 모션 설정은 선택 사항입니다\n모델이 정상적으로 표시되면 화면 하단의 '다음으로 진행' 버튼을 클릭하세요."
+        "translation": "블러 설정을 추가하고 싶은 PMX 모델을 '블러 대상 모델' 필드에 설정하세요.\n확인용 모션 설정은 선택 사항입니다\n모델이 정상적으로 표시되면 화면 하단의 '다음으로 진행' 버튼을 클릭하세요."
     },
     {
         "id": "Step2概要",
@@ -177,7 +177,7 @@
     },
     {
         "id": "Step2メッセージ",
-        "translation": "'블러 생성 대상 모델'에 설정된 모델의 모든 재질 중 블러 설정을 추가하고 싶은 재질만 선택되어 있는지 확인하세요.\n처음에는 모든 재질이 선택되어 있으며, 선택을 해제하면 숨겨집니다.\n블러 설정을 추가하고 싶은 재질만 표시된 상태가 되면, 화면 하단의 '다음으로 진행' 버튼을 클릭하세요."
+        "translation": "'블러 대상 모델'에 설정된 모든 재질 중에서 블러 설정을 하고 싶은 재질만 선택된 상태로 해 주세요.\n처음에는 모든 재질이 선택되어 있으며, 선택을 해제하면 비표시 상태가 됩니다.\n블러 설정을 하고 싶은 재질만 표시된 상태가 되면 화면 하단의 '다음으로 진행' 버튼을 클릭하세요."
     },
     {
         "id": "Step3概要",
@@ -185,7 +185,7 @@
     },
     {
         "id": "Step3メッセージ",
-        "translation": "블러 설정을 추가하고 싶은 재질에서 블러를 발생시키고 싶은 마루 측의 근원(블러를 확장하고 싶은 방향의 근원) 정점을 선택하세요.\n선택된 정점에서 끝으로 향하는 정점에 블러를 생성합니다.\nStep.3 표시 시 와이어프레임 ON, 정점 선택 기능이 ON 상태입니다.\n중복 정점(같은 위치에 있는 정점)은 쉼표로 구분되어 표시됩니다.\n근원 정점이 하나 선택되면 화면 하단의 '다음으로 진행' 버튼을 클릭하세요."
+        "translation": "블러 설정을 하고 싶은 재질에서 블러를 발생시키고 싶은 첨부측의 손에 위치한 꼭짓점을 선택하세요.\n선택된 꼭짓점에서 칼끝을 향한 꼭짓점으로 블러를 생성합니다.\nStep.3가 표시될 때 와이어프레임 ON, 꼭짓점 선택 기능이 ON 상태로 됩니다.\n중복 꼭짓점(같은 위치에 있는 꼭짓점)은 쉼표로 구분하여 표시합니다.\n뿌리 꼭짓점이 선택되면 화면 하단의 '다음으로 진행' 버튼을 클릭하세요."
     },
     {
         "id": "Step4概要",
@@ -193,7 +193,7 @@
     },
     {
         "id": "Step4メッセージ",
-        "translation": "블러 설정을 추가하고 싶은 재질에서 끝 부분(블러의 종점) 정점을 선택하세요.\nStep.4 표시 시 와이어프레임 ON, 정점 선택 기능이 ON 상태입니다.\n중복 정점(같은 위치에 있는 정점)은 쉼표로 구분되어 표시됩니다.\n끝 부분 정점이 하나 선택되면 화면 하단의 '다음으로 진행' 버튼을 클릭하세요."
+        "translation": "블러 설정을 하고 싶은 재질 중에서 칼끝(블러의 끝점) 꼭짓점을 선택하세요.\nStep.4가 표시될 때 와이어프레임 ON, 꼭짓점 선택 기능이 ON 상태로 됩니다.\n중복 꼭짓점(같은 위치에 있는 꼭짓점)은 쉼표로 구분하여 표시합니다.\n칼끝 꼭짓점이 선택되면 화면 하단의 '다음으로 진행' 버튼을 클릭하세요."
     },
     {
         "id": "Step5概要",
@@ -201,14 +201,14 @@
     },
     {
         "id": "Step5メッセージ",
-        "translation": "블러 설정을 추가하고 싶은 재질에서 블러를 발생시키고 싶은 칼날 측의 정점을 선택하세요.\n선택된 정점군과, Step3에서 선택한 마루 정점, Step4에서 선택한 끝 부분 정점 사이의 정점에 대해 블러 재질을 생성합니다.\n선택 순서는 임의입니다.\n칼날 측의 정점 선택이 완료되면, 화면 하단의 '미리보기' 버튼을 클릭하세요."
+        "translation": "블러 설정을 하고 싶은 재질 중에서 블러로 표시하고 싶은 칼날 측의 꼭짓점을 선택하세요.\n선택된 꼭짓점 군과 Step3에서 선택한 첨부 꼭짓점, Step4에서 선택한 칼끝 꼭짓점 사이의 꼭짓점에 대해 블러 재질을 생성합니다.\n선택 순서는 자유입니다.\n칼날 측 꼭짓점 선택이 완료되면 화면 하단의 '프리뷰로 확인' 버튼을 클릭하세요."
     },
     {
         "id": "Step5プレビュー概要",
-        "translation": "Step.5 미리보기 개요"
+        "translation": "Step.5 프리뷰 개요"
     },
     {
         "id": "Step5プレビューメッセージ",
-        "translation": "'미리보기' 버튼을 클릭하면 원본 모델 위에 블러가 추가된 모델이 미리보기로 표시됩니다.\n(카메라 조작 방법은 메뉴 > 뷰어 > 사용 방법을 참조하세요)\n\n【확인해야 할 사항】\n- 블러가 마루 측에만 확장되었는지 ... \n   블러 재질은 마루 측에만 확장되도록 설정되었습니다\n   (내려치는 방향의 반대 방향으로 블러 재질이 확장됩니다)\n   블러가 이상한 방향으로 확장되지 않았는지 확인하세요\n   (블러 부분이 명확해지도록 빨간 모프를 추가했습니다)\n- 블러 재질에 누락된 정점이 없는지 ... \n   마루 측 정점만 블러로 확장되도록 설정하고, 칼날 측 정점은 본체를 따라가도록 했습니다.\n   블러 재질에 구멍이 있는 경우, Step.5의 칼날 정점 선택이 부족한 것입니다.\n\n설정을 변경하고 싶다면 Step.5의 두 번째 '미리보기를 취소하고 다시 조정' 버튼을 클릭하세요.\n(미리보기 중에도 편집할 수 있지만, '미리보기' 버튼을 클릭하지 않으면 새 설정이 반영되지 않습니다)\n문제가 없으면 '저장' 버튼을 클릭하세요."
+        "translation": "'프리뷰로 확인' 버튼을 클릭하면 프리뷰 뷰어에서 블러 설정이 추가된 모델이 표시됩니다.\n(카메라 조작 방법은 메뉴＞뷰어＞사용 방법을 참조하세요)\n\n【확인해야 할 내용】\n・첨부측에만 블러가 뻗어나가는가?\n　　모멘텀을 나타내기 위해 블러 재질은 첨부측으로만 뻗어나가도록 설정하고 있습니다.\n　　(내리치는 방향의 반대 방향으로 블러 재질이 뻗어나갑니다)\n　　이상한 방향으로 블러가 뻗어나가지 않았는지 확인하세요\n　　(블러 부분을 더 분명하게 하기 위해 빨간 색상을 추가했습니다)\n・블러 재질에 꼭짓점이 빠져있지 않은가?\n　　첨부측 꼭짓점만 블러로 뻗어나가도록 설정하고, 칼날측 꼭짓점은 본체를 따라가도록 설정합니다.\n　　블러 재질에 구멍이 있는 경우, Step.5에서 칼날 꼭짓점 선택이 부족한 것입니다.\n\n설정을 변경하고 싶다면 Step.5의 두 번째에 있는 '프리뷰를 취소하고 다시 조정' 버튼을 클릭하세요.\n문제가 없었다면 '저장' 버튼을 클릭하세요."
     }
 ]
