--- a/cmd/i18n/app.zh.json
+++ b/cmd/i18n/app.zh.json
@@ -57,59 +57,59 @@
     },
     {
         "id": "Step1Label",
-        "translation": "- 请选择希望添加模糊设置的Pmx模型\n- 动作设置是可选的\n- 确认模型显示后，点击底部的“下一步”按钮"
+        "translation": "・请指定要设置模糊的PMX模型。\n・运动设置是可选的。\n・确认模型显示后，请点击底部的“下一步”按钮。"
     },
     {
         "id": "Step1成功",
-        "translation": "目标模型的模糊设置成功加载。\n前往Step.2选项卡"
+        "translation": "模糊设置目标模型已成功加载。\n继续到Step.2选项卡。"
     },
     {
         "id": "Step1失敗",
-        "translation": "未能加载目标模型的模糊设置。\n请检查是否指定了正确的文件路径"
+        "translation": "加载模糊设置目标模型失败。\n请确认是否指定了正确的文件路径。"
     },
     {
         "id": "Step2Label",
-        "translation": "- 确保仅选择希望应用模糊设置的材质\n- 对于日本刀，仅选择与刀身相关的材质"
+        "translation": "・请确保只选中要设置模糊的材质。\n・在日本刀的情况下，只选择与刀身相关的材质。"
     },
     {
         "id": "Step2成功",
-        "translation": "成功设置了目标材质的模糊设置。\n前往Step.3选项卡"
+        "translation": "模糊设置目标材质已成功配置。\n继续到Step.3选项卡。"
     },
     {
         "id": "Step2失敗",
-        "translation": "未选择任何目标材质的模糊设置。\n请选择希望添加模糊设置的一个或多个材质"
+        "translation": "没有选择模糊设置目标材质。\n请至少选择一个要设置模糊的材质。"
     },
     {
         "id": "Step3Label",
-        "translation": "- 选择希望应用模糊设置的材质，从开始点选择一个峰的顶点。\n- 对于日本刀，这是峰区。\n- 如果有重叠的顶点，将以逗号分隔显示\n- 如果错误选择了顶点，可以按住Ctrl键并再次选择该顶点以取消选择。"
+        "translation": "・请选择要设置模糊的材质的峰部（mune）的起始顶点。\n・在日本刀的情况下，这是mune-machi区域。\n・如果有重叠的顶点，它们将以逗号分隔显示。\n・要取消选择错误的顶点，请按住Ctrl键，然后再次选择该顶点。"
     },
     {
         "id": "Step3成功",
-        "translation": "成功设置了峰的起点顶点的模糊设置。\n前往Step.4选项卡"
+        "translation": "模糊设置目标峰部的起始顶点已成功配置。\n继续到Step.4选项卡。"
     },
     {
         "id": "Step3失敗",
-        "translation": "未选择峰的起点顶点的模糊设置。\n请选择希望应用模糊设置的材质的峰的起点顶点。"
+        "translation": "未选择模糊设置目标峰部的起始顶点。\n请选择要设置模糊的材质的峰部（mune）的起始顶点。"
     },
     {
         "id": "Step4Label",
-        "translation": "- 选择希望应用模糊设置的材质的一个顶点。\n- 如果有重叠的顶点，将以逗号分隔显示\n- 如果错误选择了顶点，可以按住Ctrl键并再次选择该顶点以取消选择。"
+        "translation": "・请选择要设置模糊的材质的尖端顶点。\n・如果有重叠的顶点，它们将以逗号分隔显示。\n・要取消选择错误的顶点，请按住Ctrl键，然后再次选择该顶点。"
     },
     {
         "id": "Step4成功",
-        "translation": "成功设置了模糊设置的顶点。\n前往Step.5选项卡"
+        "translation": "模糊设置目标尖端顶点已成功配置。\n继续到Step.5选项卡。"
     },
     {
         "id": "Step4失敗",
-        "translation": "未选择模糊设置的顶点。\n请选择希望应用模糊设置的材质的一个顶点。"
+        "translation": "未选择模糊设置目标尖端顶点。\n请选择要设置模糊的材质的尖端顶点。"
     },
     {
         "id": "Step5Label",
-        "translation": "- 从希望应用模糊设置的材质中，选择要显示模糊的刀刃部分的顶点。\n- 选择顺序是任意的。\n- 如果有重叠的顶点，将以逗号分隔显示\n- 如果错误选择了顶点，可以按住Ctrl键并再次选择该顶点以取消选择。"
+        "translation": "・请选择要作为模糊显示的材质的边缘部分的顶点。\n・选择顺序是可选的。\n・如果有重叠的顶点，它们将以逗号分隔显示。\n・要取消选择错误的顶点，请按住Ctrl键，然后再次选择该顶点。"
     },
     {
         "id": "Step5失敗",
-        "translation": "未选择刀刃部分的模糊设置顶点。\n请选择希望显示模糊的刀刃部分的顶点。"
+        "translation": "未选择模糊设置目标刃顶点。\n请选择要作为模糊显示的刃部分的顶点。"
     },
     {
         "id": "生成失敗",
@@ -121,11 +121,11 @@
     },
     {
         "id": "生成失敗メッセージ",
-        "translation": "未能生成包含模糊设置的模型\n错误消息: {{.Error}}"
+        "translation": "生成带有模糊设置的模型失败\n错误信息: {{.Error}}"
     },
     {
         "id": "生成成功メッセージ",
-        "translation": "成功生成了包含模糊设置的模型\n预览模型在原始模型上旋转\n\n【检查事项】\n- 模糊是否仅延伸到峰侧？\n   模糊材质仅延伸到峰侧以表示动量\n   （模糊材质延伸到下摆动作的相反方向）\n   请确认模糊没有延伸到奇怪的方向\n   （为了便于理解模糊部分，添加了红色变形）\n- 模糊材质中是否有漏掉的顶点？\n   峰侧的顶点被设置为延伸为模糊，刀刃侧的顶点被设定为跟随主体。\n   如果模糊材质中有孔，说明Step.5中的刀刃顶点选择不足。\n\n如果想要更改设置，请点击Step.5中的第二个“取消预览并重新调整”按钮。\n如果没有问题，请点击“保存”按钮。"
+        "translation": "成功生成带有模糊设置的模型\n预览模型在预览查看器中旋转\n\n【需要确认的内容】\n・模糊是否只向峰侧延伸？\n　　为表示动力，模糊材质设置为只向峰侧延伸。\n　　（确认模糊材质没有向奇怪的方向延伸）\n　　（为了使模糊部分更明显，添加了红色形态）\n・模糊材质中是否有缺失的顶点？\n　　峰侧的顶点被设置为作为模糊延伸，而刃侧的顶点跟随主体。\n　　如果模糊材质中有空洞，说明在Step.5中缺少了选中的刃顶点。\n\n如果要更改设置，请点击Step.5中第二项的“取消预览并重新调整”按钮。\n如果没有问题，请点击“保存”按钮。"
     },
     {
         "id": "出力失敗",
@@ -137,19 +137,19 @@
     },
     {
         "id": "出力失敗メッセージ",
-        "translation": "未能输出包含模糊设置的模型\n错误消息: {{.Error}}"
+        "translation": "输出带有模糊设置的模型失败\n错误信息: {{.Error}}"
     },
     {
         "id": "出力成功メッセージ",
-        "translation": "成功输出了包含模糊设置的模型\n默认情况下，模糊材质是隐藏的，请添加显示变形\n预览中使用的动作也作为参考输出\n\n{{.Path}}"
+        "translation": "成功输出带有模糊设置的模型\n默认情况下，模糊材质隐藏，请应用显示形态。\n预览中使用的运动也作为参考输出。\n\n{{.Path}}"
     },
     {
         "id": "出力モデルなし",
-        "translation": "无输出模型"
+        "translation": "没有输出模型"
     },
     {
         "id": "出力モデルなしメッセージ",
-        "translation": "找不到可输出的带有模糊设置的模型。\n请重新进行预览"
+        "translation": "未找到带有模糊设置的可输出模型。\n请重新预览"
     },
     {
         "id": "設定失敗",
@@ -161,7 +161,7 @@
     },
     {
         "id": "概要メッセージ",
-        "translation": "这是一个用于为武器（主要是刀）添加模糊设置的工具。\n当刀被挥下时，模糊出现在峰侧。\n默认情况下，它是隐藏的，并通过变形调整透明度显示。\n另外，还会创建颜色变形和AL变形。"
+        "translation": "该工具用于为武器（主要是剑）添加模糊设置。\n模糊显示在剑挥动时的峰侧。\n默认情况下，它是隐藏的，并通过形态调整其透明度。\n此外，还创建了颜色形态和AL形态。"
     },
     {
         "id": "Step1概要",
@@ -169,7 +169,7 @@
     },
     {
         "id": "Step1メッセージ",
-        "translation": "请在“模糊生成目标模型”栏中设置希望添加模糊设置的PMX模型。\n验证动作的设置是可选的。\n模型正确显示后，请点击屏幕底部的“下一步”按钮。"
+        "translation": "请将要添加模糊设置的PMX模型设置在“模糊目标模型”字段中。\n确认运动的设置是可选的\n模型正确显示后，请点击屏幕底部的“下一步”按钮。"
     },
     {
         "id": "Step2概要",
@@ -177,7 +177,7 @@
     },
     {
         "id": "Step2メッセージ",
-        "translation": "确保仅选择“模糊生成目标模型”中设置的模型的所有材质中希望添加模糊设置的材质。\n初始时会选择所有材质，取消选择的材质会被隐藏。\n当只显示希望添加模糊设置的材质时，请点击屏幕底部的“下一步”按钮。"
+        "translation": "从“模糊目标模型”中设置的所有材质中，请确保只选择要设置模糊的材质。\n最初，所有材质都被选择，取消选择它们会使它们不可见。\n一旦只有要设置模糊的材质可见，请点击屏幕底部的“下一步”按钮。"
     },
     {
         "id": "Step3概要",
@@ -185,7 +185,7 @@
     },
     {
         "id": "Step3メッセージ",
-        "translation": "从希望添加模糊设置的材质中选择在峰侧（希望延伸模糊的方向的峰侧）手元的顶点。\n将从选择的根元顶点生成到切先的顶点模糊。\nStep.3显示时，线框和顶点选择功能已打开。\n重叠的顶点（位于相同位置的顶点）将以逗号分隔显示。\n选择完根元顶点后，请点击屏幕底部的“下一步”按钮。"
+        "translation": "从要设置模糊的材质中，选择手头的峰侧顶点（模糊方向的起始点）。\n模糊将从选定的顶点生成到尖端。\nStep.3显示时，启用线框和顶点选择功能。\n重复顶点（同一位置的顶点）用逗号分隔显示。\n一旦选择了一个根顶点，请点击屏幕底部的“下一步”按钮。"
     },
     {
         "id": "Step4概要",
@@ -193,7 +193,7 @@
     },
     {
         "id": "Step4メッセージ",
-        "translation": "从希望添加模糊设置的材质中选择切先（模糊的终点）顶点。\nStep.4显示时，线框和顶点选择功能已打开。\n重叠的顶点（位于相同位置的顶点）将以逗号分隔显示。\n选择完切先顶点后，请点击屏幕底部的“下一步”按钮。"
+        "translation": "从要设置模糊的材质中，选择尖端顶点（模糊的终点）。\nStep.4显示时，启用线框和顶点选择功能。\n重复顶点（同一位置的顶点）用逗号分隔显示。\n一旦选择了一个尖端顶点，请点击屏幕底部的“下一步”按钮。"
     },
     {
         "id": "Step5概要",
@@ -201,7 +201,7 @@
     },
     {
         "id": "Step5メッセージ",
-        "translation": "从希望添加模糊设置的材质中选择希望显示模糊的刀刃侧的顶点。\n将针对在Step.3中选择的峰顶点、Step.4中选择的切先顶点和这里选择的刀刃顶点之间的顶点生成模糊材质。\n选择顺序是任意的。\n选择完刀刃顶点后，请点击屏幕底部的“预览”按钮。"
+        "translation": "从要设置模糊的材质中，选择要生成模糊材质的刃侧顶点。\n将生成模糊材质的顶点群与Step.3中选择的峰顶点和Step.4中选择的尖端顶点连接。\n选择顺序是可选的。\n一旦完成刃侧顶点选择，请点击屏幕底部的“预览确认”按钮。"
     },
     {
         "id": "Step5プレビュー概要",
@@ -209,6 +209,6 @@
     },
     {
         "id": "Step5プレビューメッセージ",
-        "translation": "点击“预览”按钮，将在原始模型上显示添加了模糊的模型。\n（有关相机操作，请参阅菜单>查看器>使用方法）\n\n【检查事项】\n- 模糊是否仅延伸到峰侧？\n   模糊材质仅延伸到峰侧以表示动量\n   （模糊材质延伸到下摆动作的相反方向）\n   请确认模糊没有延伸到奇怪的方向\n   （为了便于理解模糊部分，添加了红色变形）\n- 模糊材质中是否有漏掉的顶点？\n   峰侧的顶点被设置为延伸为模糊，刀刃侧的顶点被设定为跟随主体。\n   如果模糊材质中有孔，说明Step.5中的刀刃顶点选择不足。\n\n如果想要更改设置，请点击Step.5中的第二个“取消预览并重新调整”按钮。\n（虽然您可以在预览期间进行编辑，但如果不点击“预览”按钮，则不会反映新的设置）\n如果没有问题，请点击“保存”按钮。"
+        "translation": "点击“预览确认”按钮，在预览查看器中显示添加了模糊设置的模型。\n（关于如何操作摄像机，请参考菜单＞查看器＞使用方法）\n\n【需要确认的内容】\n・模糊是否只向峰侧延伸？\n　　为表示动力，模糊材质设置为只向峰侧延伸。\n　　（确认模糊材质没有向奇怪的方向延伸）\n　　（为了使模糊部分更明显，添加了红色形态）\n・模糊材质中是否有缺失的顶点？\n　　峰侧的顶点被设置为作为模糊延伸，而刃侧的顶点跟随主体。\n　　如果模糊材质中有空洞，说明在Step.5中缺少了选中的刃顶点。\n\n如果要更改设置，请点击Step.5中第二项的“取消预览并重新调整”按钮。\n如果没有问题，请点击“保存”按钮。"
     }
 ]
