--- a/cmd/i18n/app.ja.json
+++ b/cmd/i18n/app.ja.json
@@ -105,7 +105,7 @@
     },
     {
         "id": "Step5Label",
-        "translation": "・ブレ設定を入れたい材質で、ブレとして表示したい刃部分の頂点を選択してください。\n・選択する順番は任意です。\n・場所が重複する頂点がある場合、カンマ区切りで表示します\n・誤って選択した頂点は、Ctrlキーを押しながらもう一度選択すると選択が解除されます。"
+        "translation": "・ブレ設定を入れたい材質で、ブレとして表示したい刃部分の頂点を選択してください。\n・選択する順番は任意です。Step3・4で選択済みの頂点は選択不要です。\n・場所が重複する頂点がある場合、カンマ区切りで表示します\n・誤って選択した頂点は、Ctrlキーを押しながらもう一度選択すると選択が解除されます。"
     },
     {
         "id": "Step5失敗",
