--- a/cmd/i18n/app.ko.json
+++ b/cmd/i18n/app.ko.json
@@ -105,7 +105,7 @@
     },
     {
         "id": "Step5Label",
-        "translation": "・블러로 표시하고 싶은 칼날 부분의 꼭짓점을 선택하세요.\n・선택 순서는 자유입니다.\n・중복되는 꼭짓점이 있는 경우 쉼표로 구분하여 표시합니다.\n・잘못 선택한 꼭짓점은 Ctrl 키를 누르면서 다시 선택하면 선택이 해제됩니다."
+        "translation": "・블러 설정을 적용할 재질에서 블러로 표시할 칼날 부분의 꼭짓점을 선택하십시오.\n・선택 순서는 자유롭습니다. 3단계와 4단계에서 이미 선택된 꼭짓점은 선택할 필요가 없습니다.\n・위치가 중복되는 꼭짓점이 있는 경우 쉼표로 구분하여 표시됩니다.\n・잘못 선택한 꼭짓점은 Ctrl 키를 누른 상태에서 다시 선택하면 선택이 해제됩니다."
     },
     {
         "id": "Step5失敗",
