--- a/cmd/i18n/app.zh.json
+++ b/cmd/i18n/app.zh.json
@@ -105,7 +105,7 @@
     },
     {
         "id": "Step5Label",
-        "translation": "・请选择要作为模糊显示的材质的边缘部分的顶点。\n・选择顺序是可选的。\n・如果有重叠的顶点，它们将以逗号分隔显示。\n・要取消选择错误的顶点，请按住Ctrl键，然后再次选择该顶点。"
+        "translation": "・请在要应用模糊设置的材质上选择要作为模糊显示的刀片部分的顶点。\n・选择顺序是任意的。在步骤3和4中已选择的顶点无需选择。\n・如果有位置重叠的顶点，它们将以逗号分隔显示。\n・如果误选了某个顶点，可以按住Ctrl键再次选择该顶点以取消选择。"
     },
     {
         "id": "Step5失敗",
